--- a/california_housing_MLP.ipynb
+++ b/california_housing_MLP.ipynb
@@ -37,6 +37,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [10/100], Loss: 0.1527\n",
+      "Epoch [20/100], Loss: 0.4091\n",
+      "Epoch [30/100], Loss: 0.1636\n",
+      "Epoch [40/100], Loss: 0.1428\n",
+      "Epoch [50/100], Loss: 0.1988\n",
+      "Epoch [60/100], Loss: 0.2699\n",
+      "Epoch [70/100], Loss: 0.3749\n",
+      "Epoch [80/100], Loss: 0.0739\n",
+      "Epoch [90/100], Loss: 0.0701\n",
+      "Epoch [100/100], Loss: 0.0683\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pytorch basics\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
+    "# Check if MPS is available\n",
+    "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "\n",
+    "# Define a more complex model\n",
+    "class SimpleModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(SimpleModel, self).__init__()\n",
+    "        self.fc1 = nn.Linear(10, 50)\n",
+    "        self.fc2 = nn.Linear(50, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "# Create a model instance and move it to the MPS device\n",
+    "model = SimpleModel().to(device)\n",
+    "\n",
+    "# Define a loss function and an optimizer\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
+    "\n",
+    "# Create some dummy data\n",
+    "inputs = torch.randn(100, 10).to(device)\n",
+    "targets = torch.randn(100, 1).to(device)\n",
+    "\n",
+    "# Normalize the input data\n",
+    "inputs = (inputs - inputs.mean()) / inputs.std()\n",
+    "\n",
+    "# Use a DataLoader for batching\n",
+    "dataset = TensorDataset(inputs, targets)\n",
+    "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in range(100):\n",
+    "    for batch_inputs, batch_targets in dataloader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(batch_inputs)\n",
+    "        loss = criterion(outputs, batch_targets)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    if (epoch + 1) % 10 == 0:\n",
+    "        print(f'Epoch [{epoch + 1}/100], Loss: {loss.item():.4f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
